@@ -1,6 +1,6 @@
 
 #define PACKAGE_NAME    "QXGEdit"
-#define PACKAGE_VERSION "0.0.1.7"
+#define PACKAGE_VERSION "0.0.1.8"
 
 #define PACKAGE_STRING  PACKAGE_NAME " " PACKAGE_VERSION
 
